@@ -5,16 +5,18 @@ dilutions.name=Dilutions
 
 full=full
 high=high
+liters=Liters
 low=low
 lots=lots
+moles=moles
 molarity=Molarity
 none=none
 saturated=Saturated!
 showValues=Show values
 solute=Solute
-soluteAmount=<html><center>Solute<br>Amount<br>(moles)</html>
-solutionConcentration=<html><center>Solution<br>Concentration<br>(Molarity)</html>
-solutionVolume=<html><center>Solution<br>Volume<br>(Liters)</html>
+soluteAmount=<html><center>Solute<br>Amount</html>
+solutionConcentration=<html><center>Solution<br>Concentration</html>
+solutionVolume=<html><center>Solution<br>Volume</html>
 units.liters=L
 units.molarity=M
 units.moles=mol
